build: Fix build when native backend is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=792281